<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/mobile_payment"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="19sp" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="txnid"
    android:id="@+id/showtxnid"/>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/pay_using_mobile_account_click_here_and_pay_the_total_price_and_add_the_ten_number_below"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/txnid"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/edit_text_box"
                android:ems="10"
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/txn_id"
                android:padding="10dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:drawableStart="@drawable/iconfeatheralerttriangle"
                android:drawablePadding="12dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/note_don_t_add_used_txn_id"
                android:textAlignment="gravity"
                android:textSize="16sp" />

            <Button
                android:id="@+id/payfinal"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/confirm_payment" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>