<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81E1DDDD"
    tools:context=".ChoosePayemntMethod">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmpayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radiogrouppay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/black"
                android:dividerPadding="2dp"
                android:showDividers="middle|end">

                <RadioButton
                    android:id="@+id/payusingcash"
                    style="@android:style/Widget.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_at_the_hotel"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/payusingmobile"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_payment"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="19sp" />

                <RadioButton
                    android:id="@+id/payusingpaypal"
                    style="@android:style/Widget.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_using_paypal"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="19sp" />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/confirmpayment"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:text="@string/confirm_payment"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>